--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8"> 
   <title>Guess The Number</title> 
   <link rel="stylesheet" href="style.css"> 
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
  </head> 
  <body> <button class="reset-btn" onclick="Restart()">Reset</button> 
   <div> 
